--- a/go.gov.sg.css
+++ b/go.gov.sg.css
@@ -1238,7 +1238,7 @@ body {
 .jss63 {
     color: #fff;
     font-size: 6rem;
-    font-family: Roboto Slab, serif;
+    font-family: Roboto, serif;
     font-weight: 300;
     line-height: 1;
     letter-spacing: -0.01562em;
@@ -1247,7 +1247,7 @@ body {
 .jss64 {
     color: #fff;
     font-size: 3.75rem;
-    font-family: Roboto Slab, serif;
+    font-family: Roboto, serif;
     font-weight: 300;
     line-height: 1;
     letter-spacing: -0.00833em;
@@ -1256,7 +1256,7 @@ body {
 .jss65 {
     color: #fff;
     font-size: 3rem;
-    font-family: Roboto Slab, serif;
+    font-family: Roboto, serif;
     font-weight: 400;
     line-height: 1.04;
     letter-spacing: 0em;
@@ -1265,7 +1265,7 @@ body {
 .jss66 {
     color: #fff;
     font-size: 2.125rem;
-    font-family: Roboto Slab, serif;
+    font-family: Roboto, serif;
     font-weight: 400;
     line-height: 1.17;
     letter-spacing: 0.00735em;
@@ -2062,4 +2062,63 @@ label[data-shrink=false]+.jss261 .jss270:focus::-ms-input-placeholder {
 
 .jss294 {
     background-color: rgb(127, 151, 162);
+}
+
+.star {
+    position: relative;
+    -webkit-animation-name: fly;
+    animation-name: fly;
+    -webkit-animation-timing-function: ease-out;
+    animation-timing-function: ease-out;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite
+}
+
+#background {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
+    position: absolute
+}
+
+@-webkit-keyframes fly {
+    0% {
+        -webkit-transform: rotate(-45deg) translateX(0);
+        transform: rotate(-45deg) translateX(0);
+        opacity: 1
+    }
+
+    30% {
+        -webkit-transform: rotate(-45deg) translateX(var(--distance));
+        transform: rotate(-45deg) translateX(var(--distance));
+        opacity: 0
+    }
+
+    to {
+        -webkit-transform: rotate(-45deg) translateX(var(--distance));
+        transform: rotate(-45deg) translateX(var(--distance));
+        opacity: 0
+    }
+}
+
+@keyframes fly {
+    0% {
+        -webkit-transform: rotate(-45deg) translateX(0);
+        transform: rotate(-45deg) translateX(0);
+        opacity: 1
+    }
+
+    30% {
+        -webkit-transform: rotate(-45deg) translateX(var(--distance));
+        transform: rotate(-45deg) translateX(var(--distance));
+        opacity: 0
+    }
+
+    to {
+        -webkit-transform: rotate(-45deg) translateX(var(--distance));
+        transform: rotate(-45deg) translateX(var(--distance));
+        opacity: 0
+    }
 }
